<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="gone">

        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textSize="@dimen/city"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/temperature"
            android:textSize="@dimen/temperature"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city" />

        <TextView
            android:id="@+id/weather"
            android:layout_width="@dimen/weather_width"
            android:layout_height="wrap_content"
            android:minLines="2"
            android:text="@string/weather"
            android:textSize="@dimen/weather"
            app:layout_constraintEnd_toEndOf="@+id/temperature"
            app:layout_constraintStart_toStartOf="@+id/temperature"
            app:layout_constraintTop_toBottomOf="@+id/temperature" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weather">

            <TextView
                android:id="@+id/day0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:text="@string/day0" />

            <TextView
                android:id="@+id/day0_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:text="@string/day0_temperature" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="@dimen/small_image"
                android:layout_height="@dimen/small_image"
                android:contentDescription="@string/partly_cloudy"
                app:srcCompat="@drawable/m_cloudy" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weather">

            <TextView
                android:id="@+id/day1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:text="@string/day1" />

            <TextView
                android:id="@+id/day1_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:text="@string/day1_temperature" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="@dimen/small_image"
                android:layout_height="@dimen/small_image"
                android:contentDescription="@string/cloudy"
                app:srcCompat="@drawable/cloudy" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weather">

            <TextView
                android:id="@+id/day2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:text="@string/day2" />

            <TextView
                android:id="@+id/day2_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:text="@string/day2_temperature" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="@dimen/small_image"
                android:layout_height="@dimen/small_image"
                android:contentDescription="@string/sunny"
                app:srcCompat="@drawable/sunny" />
        </LinearLayout>

        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="@dimen/normal_image"
            android:layout_height="@dimen/normal_image"
            android:contentDescription="@string/partly_cloudy"
            app:layout_constraintBottom_toBottomOf="@+id/weather"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/temperature"
            app:srcCompat="@drawable/m_cloudy" />

        <ImageButton
            android:id="@+id/settings"
            android:layout_width="@dimen/small_image"
            android:layout_height="@dimen/small_image"
            android:contentDescription="@string/settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.02"
            app:srcCompat="@drawable/settings" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="visible">

        <CheckBox
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <CheckBox
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/pressure"
            app:layout_constraintTop_toBottomOf="@+id/pressure"
            app:layout_constraintVertical_bias="0.05" />

        <TextView
            android:id="@+id/location_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="@dimen/city"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/pressure"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <TextView
            android:id="@+id/current_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/current_location"
            android:textSize="@dimen/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/location_label"
            app:layout_constraintTop_toTopOf="@+id/location_label" />

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.975" />

        <Button
            android:id="@+id/set_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_location"
            app:layout_constraintBottom_toTopOf="@+id/pressure"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/pressure"
            app:layout_constraintTop_toBottomOf="@+id/location_label"
            app:layout_constraintVertical_bias="0.1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/location_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/city1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="City1" />

        <TextView
            android:id="@+id/city2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="City2" />

        <TextView
            android:id="@+id/city3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="City3" />

    </LinearLayout>

</FrameLayout>
