<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:scrollX="300dp"
        android:focusable="false"
        android:clickable="false"
        android:contentDescription="@string/background"
        app:srcCompat="@drawable/spring_day_04" />

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_part_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.3">

            <ImageButton
                android:id="@+id/settings_button"
                android:layout_width="@dimen/image_size_normal"
                android:layout_height="@dimen/image_size_normal"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@null"
                android:tint="@color/colorWhite"
                android:contentDescription="@string/settings_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_more_vert_black_36dp" />

            <TextView
                android:id="@+id/place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/place"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/weather_icon"
                android:layout_width="@dimen/image_size_big"
                android:layout_height="@dimen/image_size_big"
                android:layout_marginTop="80dp"
                android:contentDescription="@string/partly_cloudy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/day_partial_cloud" />

            <TextView
                android:id="@+id/temperature_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature_value"
                android:textSize="@dimen/text_size_big"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.55"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/weather_icon" />

            <TextView
                android:id="@+id/temperature_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature_unit"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_big"
                app:layout_constraintStart_toEndOf="@+id/temperature_value"
                app:layout_constraintTop_toTopOf="@+id/temperature_value" />

            <LinearLayout
                android:id="@+id/details_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/temperature_value"
                app:layout_constraintTop_toBottomOf="@+id/temperature_value">

                <LinearLayout
                    android:id="@+id/wind_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_normal"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/wind_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:tint="@color/colorWhite"
                        app:srcCompat="@drawable/ic_wi_strong_wind" />

                    <TextView
                        android:id="@+id/wind_value"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite" />

                    <TextView
                        android:id="@+id/wind_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/m_s"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/humidity_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_normal"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/humidity_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:tint="@color/colorWhite"
                        app:srcCompat="@drawable/ic_wi_humidity" />

                    <TextView
                        android:id="@+id/humidity_value"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite" />

                    <TextView
                        android:id="@+id/humidity_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/percent"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/pressure_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_normal"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/pressure_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:tint="@color/colorWhite"
                        app:srcCompat="@drawable/ic_wi_barometer" />

                    <TextView
                        android:id="@+id/pressure_value"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite" />

                    <TextView
                        android:id="@+id/pressure_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/mmhg"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite" />

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <HorizontalScrollView
            android:id="@+id/hourly_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".6">

            <LinearLayout
                android:id="@+id/hourly_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <!--
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/hour_layout"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/hour_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hour_value"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/text_size_bigger"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/hour_weather_image"
                        android:layout_width="@dimen/image_size_bigger"
                        android:layout_height="@dimen/image_size_bigger"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/hour_value"
                        app:srcCompat="@drawable/day_partial_cloud" />

                    <TextView
                        android:id="@+id/hour_temperature_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/temperature_value"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/text_size_bigger"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/hour_weather_image" />

                    <TextView
                        android:id="@+id/hour_temperature_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temperature_unit"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/text_size_bigger"
                        app:layout_constraintStart_toEndOf="@+id/hour_temperature_value"
                        app:layout_constraintTop_toBottomOf="@+id/hour_weather_image" />


                </androidx.constraintlayout.widget.ConstraintLayout>
-->
            </LinearLayout>
        </HorizontalScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/miscellaneous_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.1">

            <TextView
                android:id="@+id/more_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/more_info"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/three_days_forecast_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/more_info"/>

            <TextView
                android:id="@+id/last_places"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/last_places"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</FrameLayout>